<resources>
    <string name="app_name">LifxTools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LIFX Tools</string>
    <string name="nav_header_subtitle">lifxtools@jeisfeld.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_stored_colors">Stored colors</string>
    <string name="menu_manage_devices">Manage devices</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_scenes">Scenes</string>
    <string name="menu_alarm_configuration">Alarm Configuration</string>
    <string name="menu_scene_configuration">Scene Configuration</string>
    <string name="menu_alarm_step_configuration">Alarm Step Configuration</string>
    <string name="menu_general_settings">General Settings</string>
    <string name="menu_settings">Settings</string>

    <string name="message_searching_devices">Searching LIFX devices&#8230;</string>
    <string name="message_no_devices_found">No devices found.</string>

    <string name="color_off">OFF</string>
    <string name="default_alarm_name">Alarm %1$d</string>
    <string name="default_scene_name">Scene %1$d</string>
    <string name="alarm_stopsequence_name">%1$s (Stop Sequence)</string>

    <string name="notification_channel_animation">LIFX Animations</string>
    <string name="notification_title_animation">LIFX Animation</string>
    <string name="notification_text_animation_running">Animation running for %1$s</string>
    <string name="notification_channel_alarm">LIFX Alarms</string>
    <string name="notification_channel_alarm_execution">LIFX Alarm Execution</string>
    <string name="notification_title_alarm">LIFX Alarm</string>
    <string name="notification_title_alarm_execution">LIFX Alarm %1$s</string>
    <string name="notification_title_scene_execution">LIFX Scene %1$s</string>
    <string name="notification_text_alarm">%2$s: %1$s\n</string>
    <string name="notification_text_no_alarm">No further alarms</string>
    <string name="notification_alarm_action_stop">Stop</string>
</resources>
