<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.jeisfeld.lifx.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_stored_colors"
        android:name="de.jeisfeld.lifx.app.ui.storedcolors.StoredColorsFragment"
        android:label="@string/menu_stored_colors"
        tools:layout="@layout/fragment_stored_colors" />

    <fragment
        android:id="@+id/nav_manage_devices"
        android:name="de.jeisfeld.lifx.app.ui.managedevices.ManageDevicesFragment"
        android:label="@string/menu_manage_devices"
        tools:layout="@layout/fragment_manage_devices" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="de.jeisfeld.lifx.app.ui.settings.SettingsFragment"
        android:label="@string/menu_general_settings" />

</navigation>